Made frontend authorization work and created a user profile page. ref #64